<resources>
    <string name="app_name">asca</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Dont have an account? Register</string>
    <string name="registerButt">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Already have an account? Login</string>
</resources>